--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@here/maps-api-for-javascript": "^1.41.0",
+    "angular-heremaps": "^0.1.9",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -34,6 +38,9 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.6.4",
+    "webpack": "^5.80.0",
+    "webpack-cli": "^5.0.2"
   }
 }
